--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <title>Radoslav Mičko</title>
 
         <!-- FAVICON -->
-        <link rel="shortcut icon" href="assets/img/favicon.png">
+        <link rel="shortcut icon" href="assets/img/rm.png">
 
         <!-- FONTS -->
         <link href="https://fonts.googleapis.com/css?family=Bellefair&amp;subset=latin-ext" rel="stylesheet">
