--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <!-- SOCIAL ICONS -->
                 <ul class="social-icons scroll-animated-from-right">
 
-                    <li><a href="www.linkedin.com/in/radoslav-mičko-16b904161"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                    <li><a href="#www.linkedin.com/in/radoslav-mičko-16b904161"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                     <li><a href="www.instagram.com/mickorado/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 
                 </ul>
