--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
                 <!-- SOCIAL ICONS -->
                 <ul class="social-icons scroll-animated-from-right">
 
-                    <li><a href="linkedin.com/in/radoslav-mičko-16b904161"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                    <li><a href="instagram.com/mickorado/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/radoslav-mičko-16b904161"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.w3schools.com/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 
                 </ul>
                 <!-- /SOCIAL ICONS -->
